--- a/config.yaml
+++ b/config.yaml
@@ -55,33 +55,33 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
 
 proxy-groups:
-  - name: 🔯 科学上网
+  - name: 🔯 proxy
     type: select
     proxies:
       - ⚖️ HK
       - ⚖️ TW
       - ⚖️ US
-      - 🚀 节点选择
+      - 🚀 node
       - DIRECT
-  - name: 💬 OpenAI
+  - name: 🌍 region
     type: select
     proxies:
       - ⚖️ TW
       - ⚖️ US
-  - name: 🚀 节点选择
+  - name: 🚀 node
     type: select
     use:
       - node
     lazy: true
-  - name: 🎯 全球直连
+  - name: 🎯 direct
     type: select
     proxies:
       - DIRECT
-      - 🔯 科学上网
-  - name: 🐟 漏网之鱼
+      - 🔯 proxy
+  - name: 🐟 final
     type: select
     proxies:
-      - 🔯 科学上网
+      - 🔯 proxy
       - DIRECT
   - name: ⚖️ HK
     type: load-balance
@@ -111,70 +111,83 @@ rule-providers:
     type: file
     behavior: classical
     path: ./rule-set/LocalAreaNetwork.yaml
-    interval: 86400
+    interval: 864000
   BanAD:
     type: file
     behavior: classical
     path: ./rule-set/BanAD.yaml
-    interval: 86400
+    interval: 864000
   GoogleCN:
     type: file
     behavior: classical
     path: ./rule-set/GoogleCN.yaml
-    interval: 86400
+    interval: 864000
   Microsoft:
     type: file
     behavior: classical
     path: ./rule-set/Microsoft.yaml
-    interval: 86400
+    interval: 864000
   Apple:
     type: file
     behavior: classical
     path: ./rule-set/Apple.yaml
-    interval: 86400
+    interval: 864000
   OpenAi:
     type: file
     behavior: classical
     path: ./rule-set/OpenAi.yaml
-    interval: 86400
+    interval: 864000
+  TikTok:
+    type: file
+    behavior: classical
+    path: ./rule-set/TikTok.yaml
+    interval: 864000
+  Reddit:
+    type: file
+    behavior: classical
+    path: ./rule-set/Reddit.yaml
+    interval: 864000
   Bilibili:
     type: file
     behavior: classical
     path: ./rule-set/Bilibili.yaml
-    interval: 86400
+    interval: 864000
   ProxyMedia:
     type: file
     behavior: classical
     path: ./rule-set/ProxyMedia.yaml
-    interval: 86400
+    interval: 864000
   ProxyLite:
     type: file
     behavior: classical
     path: ./rule-set/ProxyLite.yaml
-    interval: 86400
+    interval: 864000
   ChinaDomain:
     type: file
     behavior: classical
     path: ./rule-set/ChinaDomain.yaml
-    interval: 86400
+    interval: 864000
   ChinaCompanyIp:
     type: file
     behavior: ipcidr
     path: ./rule-set/ChinaCompanyIp.yaml
-    interval: 86400
+    interval: 864000
 
 rules:
-  - DOMAIN,translate.googleapis.com,🔯 科学上网
-  - RULE-SET,LocalAreaNetwork,🎯 全球直连
+  - DOMAIN,translate.googleapis.com,🔯 proxy
+  - DOMAIN-SUFFIX,zhihu.com,🔯 proxy
+  - RULE-SET,LocalAreaNetwork,🎯 direct
   - RULE-SET,BanAD,REJECT
-  - RULE-SET,GoogleCN,🎯 全球直连
-  - RULE-SET,Microsoft,🔯 科学上网
-  - RULE-SET,Apple,🎯 全球直连
-  - RULE-SET,OpenAi,💬 OpenAI
-  - RULE-SET,Bilibili,🎯 全球直连
-  - RULE-SET,ProxyMedia,🔯 科学上网
-  - RULE-SET,ProxyLite,🔯 科学上网
-  - RULE-SET,ChinaDomain,🎯 全球直连
-  - RULE-SET,ChinaCompanyIp,🎯 全球直连
-  - GEOIP,CN,🎯 全球直连
-  - MATCH,🐟 漏网之鱼
+  - RULE-SET,GoogleCN,🎯 direct
+  - RULE-SET,Microsoft,🔯 proxy
+  - RULE-SET,Apple,🎯 direct
+  - RULE-SET,OpenAi,🌍 region
+  - RULE-SET,TikTok,🌍 region
+  - RULE-SET,Reddit,🌍 region
+  - RULE-SET,Bilibili,🎯 direct
+  - RULE-SET,ProxyMedia,🔯 proxy
+  - RULE-SET,ProxyLite,🔯 proxy
+  - RULE-SET,ChinaDomain,🎯 direct
+  - RULE-SET,ChinaCompanyIp,🎯 direct
+  - GEOIP,CN,🎯 direct
+  - MATCH,🐟 final
